--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+This is an old school project from ~2007 I found recently.  While the subject matter isn't really all that interesting
+I was proud of how I designed the project back in the day.  It's fairly modular and new sorting algorithms
+could be introduced pretty easily.
+
+Requires:  A java jdk and bash
+
 
 <<<<<<<<<---------------  FIRST THINGS FIRST --------------->>>>>>>>>
  ___________________________________________________________________
